--- a/Class1/index.html
+++ b/Class1/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <script src="./turtle/index.js"></script>
+  <script src="./toto/index.js"></script>
 
-  <canvas id="real-turtle"></canvas>
+  <canvas id="toto"></canvas>
 
-  <script src="./turtle/setup.js"></script>
+  <script src="./toto/setup.js"></script>
 
   <script src="draw.js"></script>
 
